--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Presiden – Fashion eCommerce HTML Template </title>
+    <title>Melam Styles</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.bin">
     
     <!-- CSS 
     ========================= -->
@@ -2241,7 +2240,7 @@
                                        <a href="index.html"><img src="assets\img\logo\logo2.png" alt=""></a>
                                    </div>
                                     <div class="footer_desc">
-                                        <p>We are a team of designers and developers that create high quality HTML Template, Woocommerce, Shopify Theme.</p>
+                                        <p>We are a clothing company located in street XXX, in country XXX</p>
                                     </div>
 
                                     <p><span>Address:</span> 49 Park Avenue, East 58st Street, Apt. 50 New York NY 10025</p>
@@ -2328,7 +2327,7 @@
                                 </ul>
                             </div>
                             <div class="copyright_area">
-                                    <p>Copyright &copy; 2019 <a href="#">Presiden</a>  All Right Reserved.</p>
+                                    <p>Copyright &copy; 2020 <a href="#">Melam Styles</a>  All Right Reserved.</p>
                                 </div>
                             <div class="footer_payment">
                                 <ul>
