strings removed -rgb -rgba -hsla

--- a/index.html
+++ b/index.html
@@ -1731,7 +1731,7 @@
     <!--product area end-->
     
     <!--banner fullwidth start-->
-    <div class="banner_fullwidth mb-70" data-bgimg="https://images4.alphacoders.com/265/thumb-1920-265996.jpg">
+    <div class="banner_fullwidth mb-70" data-bgimg="./assets/img/thumb-1920-265996.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -1946,11 +1946,11 @@
                                         <div class="variants_color">
                                            <h2>color</h2>
                                            <select class="select_option">
-                                               <option selected="" value="1">purple</option>
+                                               <option selected="" value="1">#2a2731</option>
                                                <option value="1">violet</option>
                                                <option value="1">black</option>
                                                <option value="1">pink</option>
-                                               <option value="1">orange</option>
+                                               <option value="1">#faae8a</option>
                                            </select>
                                         </div>
                                         <div class="modal_add_to_cart">
