--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,7 @@
    
     <!-- modal area start-->
     <div class="modal fade" id="modal_box" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-cente#e41134" role="document">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true"><i class="zmdi zmdi-close"></i></span>
@@ -1986,7 +1986,7 @@
                         <label class="newletter-label">Enter your email address to subscribe our notification of our new post &amp; features by email.</label>
                         <div id="frm_subscribe">
                             <form name="subscribe" id="subscribe_popup">
-                                    <!-- <span class="required">*</span><span>Enter you email address here...</span>-->
+                                    <!-- <span class="requi#e41134">*</span><span>Enter you email address here...</span>-->
                                     <input type="text" value="" name="subscribe_pemail" id="subscribe_pemail" placeholder="Enter you email address here...">
                                     <input type="hidden" value="" name="subscribe_pname" id="subscribe_pname">
                                     <div id="notification"></div>
